task2/terraform/modules/securegroups/trash/db_sg/db_sg.tf
resource "aws_security_group" "db-sg" {
  name        = "sg-db"
  description = "SG for DB"
  vpc_id      = var.vpc_id


  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = [var.cidr_block]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.cidr_block]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = [var.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "db_sg"
    owner       = "abotyan"
    description = "better-terra-abotyan-sg-db"
  }
}
